# tugas-akhir

./: .gitignore  LOGBOOK.md  README.md  check.py  coba.py  data_collecting.py  data_collection_w_vid.py  data_labelling.py  datareading.py  kfold_dataset_fixed_mct.py  kfold_reader.py  modelling.py  readme.md  requirements.txt  thesis.blg  train1.py  utils.py
code/: pyproject.toml
code/lstm/: lstm.ipynb  main.py
configs/: experiment.yaml  preprocess.yaml  train.yaml
lstm/: dataColnp.py  data_collecting.py  data_collection.py  data_collection_w_vid.py  data_labelling.py  lstm.ipynb
normalization/: grid_pose_equal_xy_like_paper.py  ilustrasi.py  landmarks_foto1.xlsx  normalization.py  paper_normalisasi_grid_foto1_v2.py
proposal/: .gitignore  paper.fdb_latexmk  paper.fls  references.bib  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.equ  thesis.fdb_latexmk  thesis.fls  thesis.lof  thesis.lot  thesis.out  thesis.run.xml  thesis.tex  thesis.toc
reports/: metrics_cnn2d_xy_dxdy_lr0.0001_bs16_fold1_lr0.0001.json  metrics_cnn2d_xy_dxdy_lr0.0001_bs16_fold2_lr0.0001.json  metrics_cnn2d_xy_dxdy_lr0.0001_bs16_fold3_lr0.0001.json  metrics_cnn2d_xy_dxdy_lr0.0001_bs16_fold5_lr0.0001.json  metrics_cnn2d_xy_lr0.0001_bs16_fold1_lr0.0001.json  metrics_cnn2d_xy_lr0.0001_bs16_fold3_lr0.0001.json  metrics_cnn2d_xy_lr0.0001_bs16_fold4_lr0.0001.json  metrics_cnn2d_xy_lr0.0001_bs16_fold5_lr0.0001.json  metrics_resnet18_xy_dxdy_lr0.0001_bs16_fold1_lr0.0001.json  metrics_resnet18_xy_dxdy_lr0.0001_bs16_fold3_lr0.0001.json  metrics_resnet18_xy_lr0.0001_bs16_fold2_lr0.0001.json  (+9 more)
(+1282 files in other folders)
