[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "moviepy>=2.2.1",
    "notebook>=7.4.5",
    "opencv-python>=4.12.0.88",
    "tensorflow>=2.20.0",
]
